k8s/deployment-1-sample.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
    env: prod
    owner: andrer_bodnar
spec:
  replicas: 3
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
        - name: test-web
          image: httpd:latest
          ports:
            - containerPort: 80
