k8s/pod-myapp-ver1.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env: prod
    app: main
    owner: andrei_bodnar
spec:
  containers:
    - name: container-apache
      image: httpd:latest
      ports:
        - containerPort: 80
