k8s/pod-myapp.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env: prod
    app: main
    owner: andrei_bodnar
spec:
  containers:
    - name: container-apache
      image: httpd:latest
      ports:
        - containerPort: 80

    - name: container-nginx
      image: tomcat:8.5.38
      ports:
        - containerPort: 8080
