k8s/service-1-lb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
    env: prod
    owner: andrer_bodnar
spec:
  replicas: 3
  selector:
    matchLabels:
      project: test # Service will look for those PODs Labels
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
        - name: test-web
          image: httpd:latest
          ports:
            - containerPort: 80

---
apiVBersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env: prod
    owner: andrei_bodnar
spec:
  selector:
    project: test #Selecting PODs with those Labels
    ports:
      - name: app-listener
        protocol: TCP
        port: 80 #Port on Load Balancer
        targetPort: 80 # Port on Pod (apache)
    type: LoadBalancer
