k8s/service-3-lb-autoscaling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
    env: prod
    owner: andrer_bodnar
spec:
  #replicas: 3 is not needed because we have an autoscaling
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
        - name: test-web
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env: prod
    owner: andrei_bodnar
spec:
  selector:
    project: test #Selecting PODs with those Labels
  ports:
    - name: app-listener
      protocol: TCP
      port: 80 #Port on Load Balancer
      targetPort: 80 # Port on Pod (apache)
  type: LoadBalancer
